@@ -1,4 +1,4 @@
 SUBDIRS=
 lib_LIBRARIES=libzbxsysinfo.a
-libzbxsysinfo_a_SOURCES=cpu.c diskio.c diskspace.c file.c inodes.c memory.c sensors.c swap.c uptime.c sysinfo.c
+libzbxsysinfo_a_SOURCES=cpu.c diskio.c diskspace.c file.c inodes.c memory.c sensors.c swap.c uptime.c sysinfo.c system.c
 libzbxsysinfo_a_LIBADD = ../zbxcrypto/libzbxcrypto.a
