@@ -1,5 +1,7 @@
 Changes for 1.1beta1:
 
+ - parameter filesize[] renamed to fs.file.size[] (Alexei)
+ - added parameter system.localtime (Alexei)
  - parameter Hostname is optional. If not specified, hostname is used. (Alexei)
  - fixed processing of W32 performance counters. Problem with long computer names. (Alexei)
  - fixed crash of WIN32 agent when processing eventlog[]. Many thanks to Simon Lund. (Alexei)
